project(SpectralDisplay VERSION 0.1 LANGUAGES CXX)

add_subdirectory(QPoligonTransform_test)
add_subdirectory(SinglePointTransform_test)
add_subdirectory(TransformationCore_test)
add_subdirectory(AppCore_test)
add_subdirectory(RenderSelector_test)
add_subdirectory(LedRuler_test)
add_subdirectory(OutputPreview_test)
